# Spotlyt

./: README.md  package-lock.json  package.json
backend/: Cargo.toml
backend/src/: auth.rs  main.rs  types.rs
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: auth.rs  lib.rs  main.rs  spotify.rs  ticketmaster.rs  types.rs
