[package]
name = "spotlyt"
version = "0.1.0"
description = "Spotlyt - find concerts from your favourite artists"
authors = ["you"]
edition = "2021"

[dependencies]
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client for Spotify/Ticketmaster API calls
reqwest = { version = "0.13.2", features = ["json", "multipart", "query"] }

# OAuth2 authentication
oauth2 = "4"

# Async runtime
tokio = { version = "1", features = ["full"] }

# URL parsing
url = "2"

# Environment variables
dotenvy = "0.15"

# String normalization (for artist name matching)
unidecode = "0.3"

open = "5"

