[package]
name = "spotlyt"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "spotlyt_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP client for Spotify/Ticketmaster API calls
reqwest = { version = "0.13.2", features = ["json"] }

# OAuth2 authentication
oauth2 = "4"

# Async runtime
tokio = { version = "1", features = ["full"] }

# URL parsing
url = "2"

# Environment variables
dotenvy = "0.15"

# String normalization (for artist name matching)
unidecode = "0.3"

open = "5"

